objects/Electric_Bill_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Cash_Flow_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Flow Details</label>
        <referenceTo>Cash_Flow_Details__c</referenceTo>
        <relationshipLabel>Electric Bill Summarys</relationshipLabel>
        <relationshipName>Electric_Bill_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Quote_ID__c</fullName>
        <formula>Quote__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Quote ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Bill_Total_20_Years__c</fullName>
        <formula>(Current_Bill_Year_1__c + Current_Bill_Year_2__c + Current_Bill_Year_3__c + Current_Bill_Year_4__c + Current_Bill_Year_5__c + Current_Bill_Year_6__c + Current_Bill_Year_7__c + Current_Bill_Year_8__c + Current_Bill_Year_9__c + Current_Bill_Year_10__c + Current_Bill_Year_11__c + Current_Bill_Year_12__c + Current_Bill_Year_13__c + Current_Bill_Year_14__c + Current_Bill_Year_15__c + Current_Bill_Year_16__c + Current_Bill_Year_17__c + Current_Bill_Year_18__c + Current_Bill_Year_19__c + Current_Bill_Year_20__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Bill Total 20 Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Bill_Year_10__c</fullName>
        <formula>Current_Bill_Year_9__c  *  1.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Bill Year 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Bill_Year_11__c</fullName>
        <formula>Current_Bill_Year_10__c  *  1.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Bill Year 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Bill_Year_12__c</fullName>
        <formula>Current_Bill_Year_11__c  *  1.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Bill Year 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Electric_Bill_Offset_Percent__c</fullName>
        <formula>(Current_Bill_Year_1__c - New_Bill_Year_1__c )/ New_Bill_Year_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electric Bill Offset Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric_Bill_Offset__c</fullName>
        <formula>( Current_Bill_Year_1__c - New_Bill_Year_1__c )/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electric Bill Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Bill_Total_20_Years__c</fullName>
        <formula>New_Bill_Year_1__c +  New_Bill_Year_2__c + New_Bill_Year_3__c + New_Bill_Year_4__c + New_Bill_Year_5__c + New_Bill_Year_6__c +  New_Bill_Year_7__c + New_Bill_Year_8__c + New_Bill_Year_9__c + New_Bill_Year_10__c + New_Bill_Year_1__c +  New_Bill_Year_12__c + New_Bill_Year_13__c + New_Bill_Year_14__c + New_Bill_Year_15__c + New_Bill_Year_16__c +  New_Bill_Year_17__c + New_Bill_Year_18__c + New_Bill_Year_19__c + New_Bill_Year_20__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Bill Total 20 Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Bill_Utility__c</fullName>
        <formula>New_Bill_Year_1__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Bill Utility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Bill_Year_10__c</fullName>
        <formula>New_Bill_Year_9__c * 1.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Bill Year 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Bill_Year_11__c</fullName>
        <formula>New_Bill_Year_10__c * 1.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Bill Year 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Bill_Year_12__c</fullName>
        <formula>New_Bill_Year_11__c * 1.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Bill Year 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Year_1_kWh__c</fullName>
        <label>New Year 1 kWh</label>
        <summarizedField>Electric_Bill_Detail__c.New_Quantity_kWh__c</summarizedField>
        <summaryFilterItems>
            <field>Electric_Bill_Detail__c.Month__c</field>
            <operation>notEqual</operation>
            <value>Minimum Bill</value>
        </summaryFilterItems>
        <summaryForeignKey>Electric_Bill_Detail__c.Electric_Bill_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Electric Bill Summarys</relationshipLabel>
        <relationshipName>Electric_Bill_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Bill_Percent__c</fullName>
        <formula>New_Bill_Year_1__c / Current_Bill_Year_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Bill Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Bill__c</fullName>
        <formula>New_Bill_Year_1__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Savings_First_Year__c</fullName>
        <formula>Current_Bill_Year_1__c - ( New_Bill_Year_1__c  +  Cash_Flow_Details__r.Lease_Payment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Savings First Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SunPower_Cost_Per_kWh__c</fullName>
        <formula>(( Cash_Flow_Details__r.Lease_Payment__c )/12+ (Quote__r.Partial_Prepayment__c)/20) / New_Year_1_kWh__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SunPower Cost Per kWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Production_Year10__c</fullName>
        <formula>System_Production_Year9__c * Quote__r.General_Derate_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Production Year10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Production_Year11__c</fullName>
        <formula>System_Production_Year10__c * Quote__r.General_Derate_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Production Year11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Production_Year12__c</fullName>
        <formula>System_Production_Year11__c * Quote__r.General_Derate_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Production Year12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Cost_of_Electricity__c</fullName>
        <formula>( New_Bill_Year_1__c + Cash_Flow_Details__r.Lease_Payment__c )/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Cost of Electricity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility_Cost_Per_kWh__c</fullName>
        <formula>(Current_Bill_Year_1__c - New_Bill_Year_1__c)</formula>
        <label>Utility Cost Per kWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year1OLDBILL__c</fullName>
        <formula>IF( 
  Year_1_Old_Bill__c &gt;= 1000000, 
  TEXT(FLOOR(Year_1_Old_Bill__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Year_1_Old_Bill__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Year_1_Old_Bill__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Year_1_Old_Bill__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Year_1_Old_Bill__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Year_1_Old_Bill__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Year_1_Old_Bill__c , 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year1OLDBILL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_10_New_Bill__c</fullName>
        <formula>Year_9_New_Bill__c * 1.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 10 New Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_10_Old_Bill__c</fullName>
        <formula>Year_9_Old_Bill__c * 1.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 10 Old Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_11_New_Bill__c</fullName>
        <formula>Year_10_New_Bill__c * 1.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 11 New Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_11_Old_Bill__c</fullName>
        <formula>Year_10_Old_Bill__c * 1.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 11 Old Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_12_New_Bill__c</fullName>
        <formula>Year_11_New_Bill__c * 1.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 12 New Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_12_Old_Bill__c</fullName>
        <formula>Year_11_Old_Bill__c * 1.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 12 Old Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Electric Bill Summary</label>
    <nameField>
        <label>Electric Bill Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Electric Bill Summarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>